--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "test"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "postinstall": "webpack",
